--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ matrix:
       addons: {apt: {packages: [cabal-install-1.22, ghc-7.10.3], sources: [hvr-ghc]}}
     - env: CABALVER=1.24 GHCVER=8.0.2
       addons: {apt: {packages: [cabal-install-1.24, ghc-8.0.2],  sources: [hvr-ghc]}}
+    - env: CABALVER=2.0 GHCVER=8.2.1
+      addons: {apt: {packages: [cabal-install-2.0, ghc-8.2.1],  sources: [hvr-ghc]}}
     - env: CABALVER=1.24 GHCVER=8.0.2 DYNAMIC=--enable-executable-dynamic
       addons: {apt: {packages: [cabal-install-1.24, ghc-8.0.2],  sources: [hvr-ghc]}}
 
