do not catch ^C
Semi-breaking changes:
* runInterpreter and the corresponding functions from
  Language.Haskell.Interpreter.Unsafe no longer overwrite the
  program-wide Ctrl-C signal handler to throw a UserInterrupt exception
  to the calling thread. As bug #51 indicates, this behaviour is
  surprising and is probably not what the user wants.

  If you have been relying on this behaviour, you should now install
  your own signal handler, otherwise the second Ctrl-C will terminate
  your entire program instead of just the interpreted expression.

Other changes:
* added a version of GHC.runGhcT which does not call withSignalHandlers
  and thus does not overwrite the Ctrl-C signal handler
* adjusted the documentation of 'runInterpreter' accordingly
* extended the test suite to support tests which need to run IO code
  before and/or after the Interpreter block
* added a unit test

Fixes #51

--- a/hint.cabal
+++ b/hint.cabal
@@ -43,6 +43,12 @@ test-suite unit-tests
                   extensible-exceptions,
                   exceptions == 0.8.*
 
+  if !os(windows) {
+      build-depends: unix >= 2.2.0.0
+  }
+
+  extensions:  CPP
+
 library
   build-depends: base == 4.*,
                  ghc >= 8.0 && < 8.6,
