--- a/hint.cabal
+++ b/hint.cabal
@@ -45,13 +45,17 @@ test-suite unit-tests
 
 library
   build-depends: base == 4.*,
-                 ghc >= 7.10 && < 8.4,
+                 ghc >= 7.10 && < 8.6,
                  ghc-paths,
                  mtl,
                  filepath,
                  exceptions == 0.8.*,
                  random,
                  directory
+
+  if impl(ghc >= 8.0) {
+      build-depends: ghc-boot
+  }
 
   if !os(windows) {
       build-depends: unix >= 2.2.0.0
