--- a/hint.cabal
+++ b/hint.cabal
@@ -1,5 +1,5 @@
 name:         hint
-version:      0.7.0
+version:      0.8.0
 description:
         This library defines an Interpreter monad. It allows to load Haskell
         modules, browse them, type-check and evaluate strings with Haskell
@@ -45,23 +45,19 @@ test-suite unit-tests
 
 library
   build-depends: base == 4.*,
-                 ghc >= 7.10 && < 8.6,
+                 ghc >= 8.0 && < 8.6,
                  ghc-paths,
+                 ghc-boot,
                  mtl,
                  filepath,
                  exceptions == 0.8.*,
                  random,
                  directory
 
-  if impl(ghc >= 8.0) {
-      build-depends: ghc-boot
-  }
-
   if impl(ghc >= 8.4 && < 8.6) {
       build-depends: temporary
       cpp-options: -DNEED_PHANTOM_DIRECTORY
   }
-
 
   if !os(windows) {
       build-depends: unix >= 2.2.0.0
