--- a/hint.cabal
+++ b/hint.cabal
@@ -92,6 +92,10 @@ library
   hs-source-dirs: src
 
   ghc-options: -Wall
+
+  if impl(ghc == 8.0.1)
+    cpp-options: -DGHC_801
+
   extensions:  CPP
                GeneralizedNewtypeDeriving
                DeriveDataTypeable
