--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
 matrix:
   include:
     - env: CABALVER=1.24 GHCVER=8.0.2
-      addons: {apt: {packages: [cabal-install-1.24, ghc-8.0.2],  sources: [hvr-ghc]}}
+      addons: {apt: {packages: [cabal-install-1.24, ghc-8.0.2], sources: [hvr-ghc]}}
     - env: CABALVER=2.0  GHCVER=8.2.2
-      addons: {apt: {packages: [cabal-install-2.0,  ghc-8.2.2],  sources: [hvr-ghc]}}
+      addons: {apt: {packages: [cabal-install-2.0,  ghc-8.2.2], sources: [hvr-ghc]}}
     - env: CABALVER=2.2  GHCVER=8.4.1
-      addons: {apt: {packages: [cabal-install-2.2,  ghc-8.4.1],  sources: [hvr-ghc]}}
-    - env: CABALVER=2.2  GHCVER=8.4.1 DYNAMIC=--enable-executable-dynamic
-      addons: {apt: {packages: [cabal-install-2.2,  ghc-8.4.1],  sources: [hvr-ghc]}}
+      addons: {apt: {packages: [cabal-install-2.2,  ghc-8.4.1], sources: [hvr-ghc]}}
+    - env: CABALVER=2.2  GHCVER=8.4.1 CONFIG_OPTS=--enable-executable-dynamic
+      addons: {apt: {packages: [cabal-install-2.2,  ghc-8.4.1], sources: [hvr-ghc]}}
+
+cache:
+  directories:
+    - $HOME/.cabal
+    - $HOME/.ghc
 
 before_install:
   - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
@@ -17,7 +22,7 @@ install:
   - cabal install --only-dependencies --enable-tests
 
 script:
-  - cabal configure --enable-tests $DYNAMIC
+  - cabal configure --enable-tests $CONFIG_OPTS
   - cabal build
   - cabal test
   - cabal install
