all: repository got moved to a new github org
Make the appropriate changes. Also move to travis-ci.com from
travis-ci.org, as that's where new public repositories and orgs should
go.

--- a/hint.cabal
+++ b/hint.cabal
@@ -15,7 +15,7 @@ license:      BSD3
 license-file: LICENSE
 author:       The Hint Authors
 maintainer:   mvdan@mvdan.cc
-homepage:     https://github.com/mvdan/hint
+homepage:     https://github.com/haskell-hint/hint
 
 cabal-version: >= 1.9.2
 build-type:    Simple
@@ -28,7 +28,7 @@ extra-source-files: README.md
 
 source-repository head
   type:     git
-  location: https://github.com/mvdan/hint
+  location: https://github.com/haskell-hint/hint
 
 test-suite unit-tests
   type:           exitcode-stdio-1.0
