CI: speed up setup by skipping ruby commands
While at it, bump GHC 8.4 to 8.4.3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,22 @@
+# the default is Ruby, which is slow
+language: c
+
 matrix:
   include:
     - env: CABALVER=1.24 GHCVER=8.0.2
       addons: {apt: {packages: [cabal-install-1.24, ghc-8.0.2], sources: [hvr-ghc]}}
     - env: CABALVER=2.0  GHCVER=8.2.2
       addons: {apt: {packages: [cabal-install-2.0,  ghc-8.2.2], sources: [hvr-ghc]}}
-    - env: CABALVER=2.2  GHCVER=8.4.1
-      addons: {apt: {packages: [cabal-install-2.2,  ghc-8.4.1], sources: [hvr-ghc]}}
-    - env: CABALVER=2.2  GHCVER=8.4.1 CONFIG_OPTS=--enable-executable-dynamic
-      addons: {apt: {packages: [cabal-install-2.2,  ghc-8.4.1], sources: [hvr-ghc]}}
+    - env: CABALVER=2.2  GHCVER=8.4.3
+      addons: {apt: {packages: [cabal-install-2.2,  ghc-8.4.3], sources: [hvr-ghc]}}
+    - env: CABALVER=2.2  GHCVER=8.4.3 CONFIG_OPTS=--enable-executable-dynamic
+      addons: {apt: {packages: [cabal-install-2.2,  ghc-8.4.3], sources: [hvr-ghc]}}
 
 cache:
   directories:
-    - $HOME/.cabal
-    - $HOME/.ghc
-    - dist
+    - $HOME/.cabal/
+    - $HOME/.ghc/
+    - dist/
 
 before_install:
   - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
