--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,15 @@ matrix:
     - env: CABALVER=3.2  GHCVER=8.6.5
       addons: {apt: {packages: [cabal-install-3.2,  ghc-8.6.5], sources: [hvr-ghc]}}
     - env: CABALVER=3.2  GHCVER=8.8.1
-      addons: {apt: {packages: [cabal-install-3.2,  ghc-8.8.1], sources: [hvr-ghc]}}
+      addons: {apt: {packages: [cabal-install-3.2,  ghc-8.8.2], sources: [hvr-ghc]}}
     - env: CABALVER=3.2  GHCVER=8.8.1 CONFIG_OPTS=--enable-executable-dynamic
-      addons: {apt: {packages: [cabal-install-3.2,  ghc-8.8.1], sources: [hvr-ghc]}}
+      addons: {apt: {packages: [cabal-install-3.2,  ghc-8.8.2], sources: [hvr-ghc]}}
 
 cache:
   directories:
     - $HOME/.cabal/
     - $HOME/.ghc/
-    - dist/
+    - dist-newstyle/
 
 before_install:
   - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
