--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,52 +16,52 @@ on:
 jobs:
   # Check that the build passes with stack on all the provided snapshots, and
   # thus all the supported ghc versions.
-  stack:
-    name: ${{ matrix.stack_yaml }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        stack_yaml:
-          - stack-8.6.5.yaml
-          - stack-8.8.4.yaml
-          - stack-8.10.7.yaml
-          - stack-9.0.2.yaml
-          - stack-9.2.7.yaml
-          - stack-9.4.5.yaml
-          - stack-9.6.1.yaml
-        os:
-          - ubuntu-latest
+  #stack:
+  #  name: ${{ matrix.stack_yaml }}
+  #  runs-on: ${{ matrix.os }}
+  #  strategy:
+  #    matrix:
+  #      stack_yaml:
+  #        - stack-8.6.5.yaml
+  #        - stack-8.8.4.yaml
+  #        - stack-8.10.7.yaml
+  #        - stack-9.0.2.yaml
+  #        - stack-9.2.7.yaml
+  #        - stack-9.4.5.yaml
+  #        - stack-9.6.1.yaml
+  #      os:
+  #        - ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
+  #  steps:
+  #  - uses: actions/checkout@v2
 
-    - uses: actions/cache@v2
-      name: Cache Stack Artifacts
-      with:
-        path: |
-          ~/.stack
-          .stack-work
-        key: ${{ runner.os }}-stack-${{ hashFiles(matrix.stack_yaml) }}
+  #  - uses: actions/cache@v2
+  #    name: Cache Stack Artifacts
+  #    with:
+  #      path: |
+  #        ~/.stack
+  #        .stack-work
+  #      key: ${{ runner.os }}-stack-${{ hashFiles(matrix.stack_yaml) }}
 
-    - uses: haskell-actions/setup@v2
-      id: setup-haskell-stack
-      name: Setup Stack
-      with:
-        enable-stack: true
-        stack-setup-ghc: true
-        stack-no-global: true
+  #  - uses: haskell-actions/setup@v2
+  #    id: setup-haskell-stack
+  #    name: Setup Stack
+  #    with:
+  #      enable-stack: true
+  #      stack-setup-ghc: true
+  #      stack-no-global: true
 
-    - name: Build
-      run: |
-        stack --stack-yaml=${{ matrix.stack_yaml }} install --test --bench --no-run-tests --no-run-benchmarks
+  #  - name: Build
+  #    run: |
+  #      stack --stack-yaml=${{ matrix.stack_yaml }} install --test --bench --no-run-tests --no-run-benchmarks
 
-    - name: Test
-      run: |
-        stack --stack-yaml=${{ matrix.stack_yaml }} test
+  #  - name: Test
+  #    run: |
+  #      stack --stack-yaml=${{ matrix.stack_yaml }} test
 
-    - name: Double-check the example file
-      run: |
-        stack --stack-yaml=${{ matrix.stack_yaml }} exec -- runghc examples/example.hs | diff examples/expected.txt -
+  #  - name: Double-check the example file
+  #    run: |
+  #      stack --stack-yaml=${{ matrix.stack_yaml }} exec -- runghc examples/example.hs | diff examples/expected.txt -
 
   # Check that the build passes with cabal with the latest version of our
   # dependencies.
