Revert "remove matrix-related complications"
This reverts commit 4063a9890ff184e9d3cbda7aca343fae4460ab33.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,12 @@ jobs:
   # dependencies.
   cabal:
     name: newest
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - ghc-version: '9.8.1'
+            os: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -76,8 +81,8 @@ jobs:
       id: setup-haskell-cabal
       name: Setup Cabal
       with:
-        ghc-version: '9.8.1'
-        cabal-version: latest
+        ghc-version: ${{ matrix.ghc }}
+        cabal-version: ${{ matrix.cabal }}
 
     # This freeze file is regenerated on every build, so we will always test
     # with the most recent version of our dependencies allowed by our upper
