--- a/hint.cabal
+++ b/hint.cabal
@@ -25,6 +25,7 @@ tested-with:  ghc == 8.10.7
             , ghc == 9.6.1
             , ghc == 9.8.1
             , ghc == 9.10.1
+            , ghc == 9.12.1
 
 cabal-version: >= 1.10
 build-type:    Simple
@@ -73,7 +74,7 @@ library
   default-language: Haskell2010
   build-depends: base == 4.*,
                  containers,
-                 ghc >= 8.4 && < 9.11,
+                 ghc >= 8.4 && < 9.13,
                  ghc-paths,
                  ghc-boot,
                  transformers,
