test ghc-9.8, ghc-9.10, and ghc-9.12

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
           - stack-9.2.8.yaml
           - stack-9.4.8.yaml
           - stack-9.6.6.yaml
+          - stack-9.8.4.yaml
+          - stack-9.10.3.yaml
+          - stack-9.12.3.yaml
         os:
           - ubuntu-latest
 
